2007-06-02  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* Doxyfile: Bump to 2.1.1 and add search engine support.

	* src/formats/smilesformat.cpp: Fix bug reported by Craig with
	un-matched ring closures. These should now always be rejected,
	since _rclose will not be empty.

	* test/files/invalid-smiles.txt: Add ring closure tests from
	Craig.

	* test/mol.cpp: Add test for H-H deletion bug reported by Donald,
	PR#1704551.

2007-06-01  Noel O'Boyle <baoilleach@gmail.com>

	Final changes for Windows release of OBPython 1.2

	* windows-vc2005/OBPython/setup.py: bumped version up to 1.2
	* scripts/python/pybelapi.py: updated API docs

2007-05-30  Chris Morley

	* include/openbabel/base.h(tokenize): Add \r to default
	delimiters in the two functions. Now Windows or MAC files
	(esp data files) should be read properly. 
	Cures bug #1727333, I hope.
	
2007-05-30  Chris Morley

	* src/fingerprint.cpp(Tanimoto): return 0.0 if no bits set.
	Should cure bug #1728410.
	
2007-05-30  Chris Morley

	* include/openbabel/lineend.h: remove sync()call from destructor
	so that can delete in OBConversion's destructor after
	istreams have gone.
	
	* include/openbabel/obconversion.h, *src/obconversion.cpp
	Add InstallStreamFilter() and call from Read() and Convert().
	I hope this will cure the Windows Python bug, and is a neater
	method all round.

2007-05-25  Jean Brefort  <jean.brefort@normalesup.org>

	* src/formats/xml/cdxmlformat.cpp: don't clear the molecule
	before writing. [#1725343]
	 
2007-05-14  Chris Morley

	* src/obconversion.cpp(Read, Convert): Do not install a 
	FilteringInputStreambuf if stream already contains one. This
	solves my problem with multiple reads on the same input stream.
	 
2007-05-13  Chris Morley

	* src/obconversion.cpp(Read): Ensured that FilteringInputStreambuf
	is used. Previously it wasn't, which could cause errors
	except with unix reading unix files.
	 
2007-05-12  Noel O'Boyle <baoilleach@gmail.com>
